| Summary: | ASTERISK-29795: DIALEDPEERNUMBER not set on destination channel for Queue calls | ||
| Reporter: | Mark Petersen (asterisk.org@zombie.dk) | Labels: | |
| Date Opened: | 2021-12-08 05:23:00.000-0600 | Date Closed: | 2021-12-15 10:16:51.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_queue |
| Versions: | 16.22.0 18.8.0 19.0.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | DIALEDPEERNUMBER is not being set on the outgoing channel for Queue call
if you do Dial(PJSIP/222@gw,30,b(x^y^z)) on the outgoing channel DIALEDPEERNUMBER will contain 222@gw but if you do the same with Queue(x,,b(x^y^z)) it is not set | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-12-08 05:23:01.556-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2021-12-15 10:16:51.940-0600 Change 17685 merged by Friendly Automation: app_queue.c: added DIALEDPEERNUMBER on outgoing channel [https://gerrit.asterisk.org/c/asterisk/+/17685|https://gerrit.asterisk.org/c/asterisk/+/17685] By: Friendly Automation (friendly-automation) 2021-12-15 10:16:56.034-0600 Change 17686 merged by Friendly Automation: app_queue.c: added DIALEDPEERNUMBER on outgoing channel [https://gerrit.asterisk.org/c/asterisk/+/17686|https://gerrit.asterisk.org/c/asterisk/+/17686] By: Friendly Automation (friendly-automation) 2021-12-15 10:16:57.741-0600 Change 17687 merged by Friendly Automation: app_queue.c: added DIALEDPEERNUMBER on outgoing channel [https://gerrit.asterisk.org/c/asterisk/+/17687|https://gerrit.asterisk.org/c/asterisk/+/17687] By: Friendly Automation (friendly-automation) 2021-12-15 10:17:58.902-0600 Change 17598 merged by Friendly Automation: app_queue.c: added DIALEDPEERNUMBER on outgoing channel [https://gerrit.asterisk.org/c/asterisk/+/17598|https://gerrit.asterisk.org/c/asterisk/+/17598] | ||